--- a/Battery Service Support/Views/Shared/Error.cshtml
+++ b/Battery Service Support/Views/Shared/Error.cshtml
@@ -1,2 +1,8 @@
-﻿<h3>An error occured while processing your request.</h3>
-<h5>Please contact support</h5>
+﻿@{
+    ViewData["NavTitle"] = "Errorpage";
+}
+
+    <div class="container-fluid">
+        <h3>An error occured while processing your request</h3>
+        <h5>Please contact support</h5>
+    </div>
