--- a/Battery Service Support/Views/Administration/CreateRole.cshtml
+++ b/Battery Service Support/Views/Administration/CreateRole.cshtml
@@ -9,7 +9,7 @@
             <div class="card border-0 shadow">
                 <div class="card-body">
                     <form asp-action="CreateRole" method="post">
-                        <div asp-validation-summary="All" class="text-danger"></div>
+                        @*<div asp-validation-summary="All" class="text-danger"></div>*@
                         <div class="form-group">
                             <label asp-for="RoleName" class="col-form-label"></label>
                             <input asp-for="RoleName" class="form-control" />
