--- a/Battery Service Support/Views/Shared/_Layout.cshtml
+++ b/Battery Service Support/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿@inject SignInManager<ApplicationUser> SignInManager
+@inject IAuthorizationService AuthorizationService
 
 <!DOCTYPE html>
 
@@ -70,7 +71,7 @@
                     <i class="fas fa-file-pdf" aria-hidden="true"></i> Exporteer PDF
                 </a>
             </li>
-            @if (SignInManager.IsSignedIn(User) && (User.IsInRole("Administrator") || User.IsInRole("Beheerder")))
+            @if (SignInManager.IsSignedIn(User) && (await AuthorizationService.AuthorizeAsync(User, "AdminMenuPolicy")).Succeeded)
             {
                 <li class="header">Admin Menu</li>
                 <li>
@@ -91,13 +92,16 @@
                         <a class="dropdown-item" asp-controller="Batterij" asp-action="ListActiveBatteries">
                             <i class="fas fa-battery-full" aria-hidden="true"></i> In Gebruik
                         </a>
+                        <a class="dropdown-item" asp-controller="Batterij" asp-action="BatterieWarningList">
+                            <i class="fas fa-battery-quarter" aria-hidden="true"></i> Te vervangen
+                        </a>
                         <a class="dropdown-item" asp-controller="Batterij" asp-action="ListReplacedBatteries">
                             <i class="fas fa-battery-empty" aria-hidden="true"></i> Vervangen
                         </a>
                     </div>
                 </li>
                 <li>
-                    <a href="#">
+                    <a asp-controller="Export" asp-action="ExportFromDatepicker" asp-route-redirected="false">
                         <i class="fas fa-file-csv" aria-hidden="true"></i> Exporteer CSV
                     </a>
                 </li>
