add pagination, restructure filtering

--- a/Battery Service Support/Views/Account/AccessDenied.cshtml
+++ b/Battery Service Support/Views/Account/AccessDenied.cshtml
@@ -6,6 +6,6 @@
         <div class="text-center">
             <h1 class="text-danger">Toegang geweigerd</h1>
             <h6 class="text-danger">Je hebt geen rechten om deze pagina weer te geven</h6>
-            <img src="~/images/noaccess.png"/>
+            <img src="~/images/noaccess.png" alt="Stop"/>
         </div>
     </div>
