--- a/Battery Service Support/Views/Export/ListInstallations.cshtml
+++ b/Battery Service Support/Views/Export/ListInstallations.cshtml
@@ -15,18 +15,19 @@
                                 <th>Naam</th>
                                 <th>Adres</th>
                                 <th>Gemeente</th>
+                                <th></th>
                             </tr>
                         </thead>
                         <tbody>
                             @foreach (var installatie in Model)
                             {
                                 <tr>
-                                    <td>@Html.DisplayFor(modelItem => installatie.InstallatieCode)</td>
-                                    <td>@Html.DisplayFor(modelItem => installatie.InstallatieType)</td>
-                                    <td>@Html.DisplayFor(modelItem => installatie.Naam)</td>
-                                    <td>@Html.DisplayFor(modelItem => installatie.Adres)</td>
-                                    <td>@Html.DisplayFor(modelItem => installatie.Gemeente)</td>
-                                    <td><a asp-controller="Export" asp-action="ExportToPdf" asp-route-id="@installatie.InstallatieId" class="btn btn-primary py-2 btn-block">Exporteer pdf</a></td>
+                                    <td width="10%">@Html.DisplayFor(modelItem => installatie.InstallatieCode)</td>
+                                    <td width="10%">@Html.DisplayFor(modelItem => installatie.InstallatieType)</td>
+                                    <td width="20%">@Html.DisplayFor(modelItem => installatie.Naam)</td>
+                                    <td width="20%">@Html.DisplayFor(modelItem => installatie.Adres)</td>
+                                    <td width="20%">@Html.DisplayFor(modelItem => installatie.Gemeente)</td>
+                                    <td width="20%"><a asp-controller="Export" asp-action="ExportToPdf" asp-route-id="@installatie.InstallatieId" class="btn btn-primary py-2 btn-block">Exporteer pdf</a></td>
                                 </tr>
                             }
                         </tbody>
