--- a/Battery Service Support/Views/Shared/Error.cshtml
+++ b/Battery Service Support/Views/Shared/Error.cshtml
@@ -5,4 +5,8 @@
     <div class="container-fluid">
         <h3>An error occured while processing your request</h3>
         <h5>Please contact support</h5>
+
+        <a asp-controller="Relatie" asp-action="Index">
+            Terug naar Dashboard
+        </a>
     </div>
