--- a/Battery Service Support/Views/_ViewImports.cshtml
+++ b/Battery Service Support/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Model
 @using ViewModel
+@using ViewModel.Utilities
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Authorization
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
