--- a/Battery Service Support/Views/Batterij/ListActiveBatteries.cshtml
+++ b/Battery Service Support/Views/Batterij/ListActiveBatteries.cshtml
@@ -4,7 +4,7 @@
 }
 <div class="container-fluid">
     <div class="h1 text-center">Lijst actieve batterijen</div>
-    <div class="card border-0 shadow col-10 offset-1">
+    <div class="card border-0 shadow col-12">
         <div class="row">
             <div class="col-lg-6">
                 <form asp-controller="Batterij" asp-action="ListActiveBatteries" method="get">
