--- a/Battery Service Support/Views/Batterij/ListReplacedBatteries.cshtml
+++ b/Battery Service Support/Views/Batterij/ListReplacedBatteries.cshtml
@@ -1,10 +1,10 @@
 ﻿@model PaginatedList<ListBatteriesViewModel>
 @{
-    ViewData["NavTitle"] = "Lijst Batterijen";
+    ViewData["NavTitle"] = "Lijst Vervangen Batterijen";
 }
 <div class="container-fluid">
     <div class="h1 text-center">Lijst vervangen batterijen</div>
-    <div class="card border-0 shadow col-10 offset-1">
+    <div class="card border-0 shadow col-12">
         <div class="row">
             <div class="col-lg-6">
                 <form asp-controller="Batterij" asp-action="ListReplacedBatteries" method="get">
