--- a/Battery Service Support/Views/Shared/Components/InstallatieDetail/Default.cshtml
+++ b/Battery Service Support/Views/Shared/Components/InstallatieDetail/Default.cshtml
@@ -21,7 +21,7 @@
                             <div class="row">
                                 <div class="col-md-6 h5">@Html.DisplayFor(modelItel => item.Artikel.Naam)</div>
                                 <div class="col-md-3">@Html.DisplayNameFor(modelItem => item.Datum):</div>
-                                <div id="datetrigger" class="col-md-3">@item.Datum.ToShortDateString()</div>
+                                <div class="col-md-3 datetrigger">@item.Datum.ToShortDateString()</div>
                             </div>
                             <div class="row">
                                 <div class="col-md-3">@Html.DisplayNameFor(modelItem => item.Locatie):</div>
