--- a/Battery Service Support/Views/Shared/_Layout.cshtml
+++ b/Battery Service Support/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <title>Battery Service Support</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="height: 64px; margin-top: 0px;">
+    <nav class="navbar sticky-top navbar-expand-sm bg-dark navbar-dark" >
         <div class="navbar-brand">Battery Service Support @ViewData["NavTitle"]</div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
